--- a/index.html
+++ b/index.html
@@ -11,21 +11,34 @@
 
 <body>
     <div class="container">
-        <h1>Awesome books</h1>
-        <section id="books-list">
+        <nav>
+            <h2>Awesome books</h2>
+            <ul class="options">
+                <li class="border-right menu-option blue">List</li>
+                <li class="border-right menu-option">Add new</li>
+                <li class="menu-option">Contact</li>
+            </ul>
+        </nav>
+        <div class="main-section">
+            <h1 class="home-title">Awesome books</h1>
+            <section id="books-list" class="list-view">
 
-        </section>
-        <section class="books-crud">
-            <div class="indicator"></div>
-            <h2>Add a new book</h2>
-            <form method="post" id="book-form">
-                <input type="text" placeholder="Title" id="input-title" class="input-form" required />
-                <input type="text" placeholder="Author" id="input-author" class="input-form" required />
-                <input type="submit" value="Add" class="addNewBook" />
-            </form>
-        </section>
+            </section>
+            <section class="books-crud views hidden">
+                <h2>Add a new book</h2>
+                <form method="post" id="book-form">
+                    <input type="text" placeholder="Title" id="input-title" class="input-form" required />
+                    <input type="text" placeholder="Author" id="input-author" class="input-form" required />
+                    <input type="submit" value="Add" class="addNewBook" />
+                </form>
+            </section>
+            <section class="about-view hidden">
+                <h2>Contact information</h2>
+            </section>
+        </div>
     </div>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/navigation.js"></script>
 </body>
 
 </html>
