--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
             </section>
             <section class="about-view hidden">
                 <h2>Contact information</h2>
+                <p>Do have any questions or just want to say "Hello"? You can reach out to us!</p>
+                <ul>
+                    <li>Our e-mail: mail@mail.com</li>
+                    <li>Our phone number: 0043586534422</li>
+                    <li>Our address: Streetname 22, 84503 City, Country</li>
+                </ul>
             </section>
         </div>
     </div>
