--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 </ul>
             </section>
         </div>
+        <div class="footer-section">
+            <b>Copyright ...</b>
+        </div>
     </div>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/navigation.js"></script>
